--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>me.bestemor.villagermarket</groupId>
     <artifactId>VillagerMarket</artifactId>
-    <version>1.11.5-SNAPSHOT</version>
+    <version>1.11.6-SNAPSHOT</version>
 
     <repositories>
         <repository>
@@ -145,7 +145,7 @@
         <dependency>
             <groupId>com.github.Bestem0r</groupId>
             <artifactId>BestemorCore</artifactId>
-            <version>b2ac48137e</version>
+            <version>1.3.0</version>
             <scope>compile</scope>
         </dependency>
 
@@ -182,10 +182,6 @@
                         <relocation>
                             <pattern>org.bstats</pattern>
                             <shadedPattern>net.bestemor.villagermarket.utils.bstats</shadedPattern>
-                        </relocation>
-                        <relocation>
-                            <pattern>net.bestemor.core</pattern>
-                            <shadedPattern>net.bestemor.villagermarket.core</shadedPattern>
                         </relocation>
                     </relocations>
                 </configuration>
