--- a/src/main/resources/es_ES.yml
+++ b/src/main/resources/es_ES.yml
@@ -99,6 +99,7 @@ messages:
   no_permission_buy_shop: "&cNo tienes permiso para comprar tiendas!"
   no_permission_use_item: "&cNo tienes permiso para usar este item!"
   no_permission_citizens: "&cNo tienes permiso para convertir tu tienda en un NPC!"
+  no_permission_trade_item: '&cNo tienes permiso para intercambiar artículos!'
   max_shops: "&cYa tienes &e%current%&c/&e%max%&c de tiendas disponibles!"
   get_id: "&7az clic con el botón derecho en una &bVillager Shop &7para obtener su ID!"
   #Placeholders: %id%
