--- a/src/main/resources/pt_BR.yml
+++ b/src/main/resources/pt_BR.yml
@@ -99,6 +99,7 @@ messages:
   no_permission_buy_shop: "&cVocê não tem permissão para comprar em lojas!"
   no_permission_use_item: "&cVocê não tem permissão para usar esse item!"
   no_permission_citizens: "&cVocê não tem permissão para transformar sua loja em um NPC!"
+  no_permission_trade_item: "&cVocê não tem permissão para trocar itens!"
   max_shops: "&cVocê já é dono de &e%current%&c/&e%max%&c lojas disponíveis!"
   get_id: "&7Clique com o botão direito em uma &bLoja Villager &7para pegar seu ID!"
   #Placeholders: %id%
